2008-07-16  Stef Walter  <stef@memberwebs.com>

	* acinclude.m4: Fix vala version check.
	
	* pgp/seahorse-pgp-source.c: Include appropriate header
	
2008-07-15  Stef Walter  <stef@memberwebs.com>

	* daemon/seahorse-dbus-server.c:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-dns-sd.c:
	* pgp/seahorse-pgp-source.c:
	* src/main.c:
	* configure.in: Complete decoupling from GPGME. Seahorse
	should now be buildable without GPGME or GnuPG.
	
2008-07-15  Stef Walter  <stef@memberwebs.com>

	* daemon/Makefile.am:
	* daemon/seahorse-daemon.c:
	* daemon/seahorse-service.c:
	* gkr/seahorse-gkeyring-item.c:
	* gkr/seahorse-gkeyring-operation.h:
	* libseahorse/libseahorse-c.vapi:
	* libseahorse/Makefile.am:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-keyserver-control.c:
	* libseahorse/seahorse-prefs.c:
	* libseahorse/seahorse-servers.vala: (added)
	* pgp/seahorse-hkp-source.c:
	* pgp/seahorse-ldap-source.c:
	* pgp/seahorse-server-source.c:
	* pgp/seahorse-server-source.h:
	* src/main.c:
	* src/seahorse-key-manager-store.c:
	* src/seahorse-keyserver-search.c:
	* src/seahorse-keyserver-sync.c:
	* configure.in:
	* Makefile.am: Further decouple seahorse from PGP. Implement a place
	where modules can register server uri validation functions.
	
	* libseahorse/seahorse-dns-sd.c:
	* libseahorse/seahorse-util.c:
	* pgp/seahorse-pgp-key-properties.c:
	* pgp/seahorse-pgp-photos.c:
	* ssh/seahorse-ssh-key-properties.c: Fix compile warnings	
	 
2008-07-08  Stef Walter  <stef@memberwebs.com>

	* src/Makefile.am:
	* gkr/Makefile.am:
	* pgp/Makefile.am:
	* ssh/Makefile.am:
	* libseahorse/Makefile.am:
	* acinclude.m4: Make seahorse build more reliably on machines without 
	a version of vala.

2008-07-05  Adam Schreiber  <sadam@clemson.edu>
    
    * libcryptui/cryptui.c:
    * libcryptui/cryptui.h: Add function for consumers to launch seahorse when
    a key needs to be created.
    * libcryptui/cryptui-key-chooser.c: Fix warnings