@@ -1,5 +1,11 @@
 2008-07-16  Stef Walter  <stef@memberwebs.com>
 
+	* pkcs11/*:
+	* Makefile.am:
+	* configure.in: Initial infrastructure for PKCS11 component. 
+	
+2008-07-16  Stef Walter  <stef@memberwebs.com>
+
 	* acinclude.m4: Fix vala version check.
 	
 	* pgp/seahorse-pgp-source.c: Include appropriate header
